# aychTTP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: asio_helper.cpp  asio_helper.h  aych.cppm  example_module.cpp  example_module.cppm  http_request.cppm  http_request.h  main.cpp  response_handler.cpp  response_handler.cppm  response_handler.h  tcp_server.cpp  tcp_server.cppm  tcp_server.h
src/templates/: time.html
test_client/: client.html
